{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 16,
  "lineage": "862236ec-6d5d-3b9b-21f7-495998db65b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:internet-gateway/igw-09cedb80d5776e4b3",
            "id": "igw-09cedb80d5776e4b3",
            "owner_id": "530117518858",
            "tags": {
              "Name": "Codebuild-VPC"
            },
            "tags_all": {
              "Name": "Codebuild-VPC"
            },
            "vpc_id": "vpc-0317a7ad16e4ff27d"
          },
          "dependencies": [
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_for_vpc_codebuild-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:route-table/rtb-0f308ec4a1af385ec",
            "id": "rtb-0f308ec4a1af385ec",
            "owner_id": "530117518858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09cedb80d5776e4b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route for Codebuild aws"
            },
            "tags_all": {
              "Name": "route for Codebuild aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0317a7ad16e4ff27d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1026ba598340c0a",
            "route_table_id": "rtb-0f308ec4a1af385ec",
            "subnet_id": "subnet-0a7e2447cdb3ecb08"
          },
          "dependencies": [
            "aws_subnet.public_a",
            "aws_vpc.codebuild_vpc",
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.route_for_vpc_codebuild-to-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024cdc036a915fe99",
            "route_table_id": "rtb-0f308ec4a1af385ec",
            "subnet_id": "subnet-06cd81b47b4ad0e93"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.route_for_vpc_codebuild-to-igw",
            "aws_subnet.public_b",
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_for_codebuild",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:security-group/sg-0ac2f02f11d531eab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac2f02f11d531eab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Security for Codebuild",
            "name_prefix": "",
            "owner_id": "530117518858",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0317a7ad16e4ff27d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:subnet/subnet-0a7e2447cdb3ecb08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0a7e2447cdb3ecb08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530117518858",
            "tags": {
              "Name": "Public subnet A"
            },
            "tags_all": {
              "Name": "Public subnet A"
            },
            "vpc_id": "vpc-0317a7ad16e4ff27d"
          },
          "dependencies": [
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:subnet/subnet-06cd81b47b4ad0e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-06cd81b47b4ad0e93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530117518858",
            "tags": {
              "Name": "Public subnet b"
            },
            "tags_all": {
              "Name": "Public subnet b"
            },
            "vpc_id": "vpc-0317a7ad16e4ff27d"
          },
          "dependencies": [
            "aws_vpc.codebuild_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "codebuild_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:530117518858:vpc/vpc-0317a7ad16e4ff27d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff997b3497d5e799",
            "default_route_table_id": "rtb-071a5e480e25bc38e",
            "default_security_group_id": "sg-06b3c3ac469f3e96a",
            "dhcp_options_id": "dopt-da1e78b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0317a7ad16e4ff27d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-071a5e480e25bc38e",
            "owner_id": "530117518858",
            "tags": {
              "Name": "Codebuild-VPC"
            },
            "tags_all": {
              "Name": "Codebuild-VPC"
            }
          }
        }
      ]
    }
  ]
}